--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,7 +134,11 @@ jobs:
       - name: Build macOS app
         run: |
           VERSION=$(git describe --tags --dirty --always)
-          pyinstaller --noconfirm --ascii --clean --name "$VERSION" contrib/osx/osx.spec || echo "PyInstaller build failed - macOS build may need manual adjustment"
+          pyinstaller --noconfirm --ascii --clean contrib/osx/osx.spec || echo "PyInstaller build failed - macOS build may need manual adjustment"
+          # Rename the output to include version
+          if [ -d "dist/Electrum.app" ]; then
+            mv "dist/Electrum.app" "dist/${VERSION}.app"
+          fi
 
       - name: Create DMG
         run: |
